[package]
name = "stouter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stouter"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
rand = "0.8"
hostname = "0.3"
socket2 = "0.5"
axum = "0.8"
arc-swap = "1"
yamux = "0.13"
tokio-util = { version = "0.7", features = ["compat"] }
rmp-serde = "1"
futures = "0.3"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

[dev-dependencies]
tower = "0.5"
